test_regress/t/t_pp_resetall_bad.out
%Error: t/t_pp_resetall_bad.v:9:1: syntax error, unexpected `resetall
`resetall   
^~~~~~~~~
%Error: Cannot continue
